$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-04-24 [O] Added expand/collapse styles {GauGau}
2009-04-24 [O] Added some icons to buttons {GauGau}
2009-04-24 [O] Optimized debug output {GauGau}
2009-04-23 [B] Increased maxlength for password field in user manager from 8 to 25 to match the limits elsewhere {Nibbler}
2009-04-21 [B] Fixed ecard image displaying at the wrong size {Nibbler}
2009-04-16 [D] Added expandable detail boxes to documentation {GauGau}
2009-04-13 [B] Fixed minibrowser when magic_quotes is on {Paver}
2009-04-12 [O] Replaced sidebar library dtree with treeview plugin for jquery {GauGau}
2009-03-31 [O] Removed css class variants that hardly made a difference to the original classes {GauGau} 
2009-03-31 [M] Upgraded SwfUpload to v2.2.0.1 Stable version. {Abbas}
2009-03-31 [D] Added document about style.css (work in progress) {GauGau}
2009-03-30 [M] Upgraded jquery to version 1.3.2 {Abbas}
2009-03-29 [O] Removed hard-coded script that opened external links in new windows. Added corresponding plugin instead {GauGau}
2009-03-26 [M] CPG_temp_data table no longer required {Nibbler}
2009-03-25 [M] Removed language list, theme list and language flags from config (thread ID 58681) {GauGau}
2009-02-22 [M] Renamed PHPMailer and SMTP classes to avoid conflicts with other scripts {Nibbler}
2009-03-02 [B] Fixed HTML special characters in referer for hit/vote stats {Paver}
2009-03-02 [B] Added function to recursively delete folder/file structures as a fix for the unlink-issue in update script (thread ID 57514) {GauGau}
2009-02-26 [B] Fixed browser detect giving older IE version when user_agent gives multiple {Paver}